# textTinyR

./: .Rbuildignore  .Rhistory  .gitignore  .travis.yml  404.html  DESCRIPTION  Dockerfile  NAMESPACE  NEWS.md  README.md  appveyor.yml  authors.html  cleanup  configure  configure.ac  index.html  pkgdown.yml
.Rproj.user/A7CDFDDE/: cpp-complilation-config  cpp-definition-cache  session-persistent-state
.github/workflows/: tic.yml
R/: RcppExports.R  textTinyR.R  utils.R  zzz.R
articles/: functionality_of_textTinyR_package.html  index.html  word_vectors_doc2vec.html
inst/: CITATION  COPYRIGHTS
inst/stopwords/: italian.txt
man/: COS_TEXT.Rd  Count_Rows.Rd  Doc2Vec.Rd  JACCARD_DICE.Rd  TEXT_DOC_DISSIM.Rd  batch_compute.Rd  big_tokenize_transform.Rd  bytes_converter.Rd  cluster_frequency.Rd  cosine_distance.Rd  dense_2sparse.Rd  dice_distance.Rd  dims_of_word_vecs.Rd  levenshtein_distance.Rd  load_sparse_binary.Rd  matrix_sparsity.Rd  read_characters.Rd  read_rows.Rd  save_sparse_binary.Rd  select_predictors.Rd  sparse_Means.Rd  sparse_Sums.Rd  sparse_term_matrix.Rd  text_file_parser.Rd  text_intersect.Rd  token_stats.Rd  tokenize_transform_text.Rd  tokenize_transform_vec_docs.Rd  utf_locale.Rd  vocabulary_parser.Rd
news/: index.html
reference/: COS_TEXT.html  Count_Rows.html  Doc2Vec.html  JACCARD_DICE.html  TEXT_DOC_DISSIM.html  big_tokenize_transform.html  bytes_converter.html  cluster_frequency.html  cosine_distance.html  dense_2sparse.html  dice_distance.html  dims_of_word_vecs.html  index.html  levenshtein_distance.html  load_sparse_binary.html  matrix_sparsity.html  read_characters.html  read_rows.html  save_sparse_binary.html  select_predictors.html  sparse_Means.html  sparse_Sums.html  sparse_term_matrix.html  text_file_parser.html  text_intersect.html  token_stats.html  tokenize_transform_text.html  tokenize_transform_vec_docs.html  utf_locale.html  vocabulary_parser.html
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  batch_tokenization.h  export_all_funcs.cpp  hog_features.cpp  init.c  ngram_stemmer.h  porter2_stemmer.cpp  porter2_stemmer.h  rcpp_similarities.cpp  sort_2dim_vecs.h  term_associations.h  term_matrix.h  token_big_files.h  token_stats.h  tokenization.h  word_vecs_pointer_embedding.cpp
tests/: testthat.R
vignettes/: functionality_of_textTinyR_package.Rmd  vocab_subset_200terms.txt  word_vectors_doc2vec.Rmd
(+56 files in other folders)
